P1/syntax.output
Gramática

    0 $accept: instructions $end

    1 instructions: instructions instruction
    2             | instruction

    3 instruction: ARITHMETIC_ID ASIGN expression INTRO
    4            | expression INTRO
    5            | DEC_MODE INTRO
    6            | OCT_MODE INTRO
    7            | HEX_MODE INTRO
    8            | array_exp INTRO
    9            | INTRO

   10 expression: arithmetic_exp
   11           | boolean_exp
   12           | strlen_exp

   13 arithmetic_exp: arithmetic_exp arithmetic_op1 sum
   14               | sum

   15 sum: sum arithmetic_op2 mul
   16    | SUB VAR
   17    | SUB ARITHMETIC_ID
   18    | mul

   19 mul: mul POW pow
   20    | pow

   21 pow: ARITHMETIC_ID
   22    | VAR
   23    | OPEN arithmetic_exp CLOSE
   24    | trigonometric_op OPEN arithmetic_exp CLOSE

   25 boolean_exp: boolean_exp OR and
   26            | and

   27 and: and AND not
   28    | not

   29 not: NOT top_bool
   30    | top_bool

   31 top_bool: arithmetic_exp boolean_op arithmetic_exp
   32         | TTRUE
   33         | TFALSE
   34         | OPEN boolean_exp CLOSE
   35         | BOOLEAN_ID

   36 strlen_exp: STRLEN OPEN ARITHMETIC_ID CLOSE
   37           | STRLEN OPEN VAR CLOSE

   38 array_exp: array_declaration
   39          | array_access
   40          | array_assignment
   41          | ARRAY_ID

   42 array_declaration: ARITHMETIC_ID ASIGN LBRACKET VAR RBRACKET

   43 array_assignment: ARRAY_ID LBRACKET VAR RBRACKET ASIGN expression
   44                 | ARRAY_ID LBRACKET ARITHMETIC_ID RBRACKET ASIGN expression
   45                 | ARITHMETIC_ID ASIGN ARRAY_ID LBRACKET VAR RBRACKET

   46 array_access: ARRAY_ID LBRACKET VAR RBRACKET

   47 arithmetic_op1: ADD
   48               | SUB

   49 arithmetic_op2: MUL
   50               | DIV
   51               | MOD

   52 trigonometric_op: SIN
   53                 | COS
   54                 | TAN

   55 boolean_op: GT
   56           | LT
   57           | GE
   58           | LE
   59           | EQ
   60           | NE


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    ASIGN (258) 3 42 43 44 45
    OPEN (259) 23 24 34 36 37
    CLOSE (260) 23 24 34 36 37
    TTRUE (261) 32
    TFALSE (262) 33
    AND (263) 27
    OR (264) 25
    NOT (265) 29
    DEC_MODE (266) 5
    OCT_MODE (267) 6
    HEX_MODE (268) 7
    STRLEN (269) 36 37
    LBRACKET (270) 42 43 44 45 46
    RBRACKET (271) 42 43 44 45 46
    ADD <var> (272) 47
    SUB <var> (273) 16 17 48
    MUL <var> (274) 49
    DIV <var> (275) 50
    POW <var> (276) 19
    MOD <var> (277) 51
    GT <var> (278) 55
    LT <var> (279) 56
    GE <var> (280) 57
    LE <var> (281) 58
    EQ <var> (282) 59
    NE <var> (283) 60
    VAR <var> (284) 16 22 37 42 43 45 46
    BOOLEAN_ID <var> (285) 35
    ARITHMETIC_ID <var> (286) 3 17 21 36 42 44 45
    ARRAY_ID <var> (287) 41 43 44 45 46
    INTRO <var> (288) 3 4 5 6 7 8 9
    COS <var> (289) 53
    SIN <var> (290) 52
    TAN <var> (291) 54


No terminales con las reglas donde aparecen

    $accept (37)
        on left: 0
    instructions <var> (38)
        on left: 1 2
        on right: 0 1
    instruction <var> (39)
        on left: 3 4 5 6 7 8 9
        on right: 1 2
    expression <var> (40)
        on left: 10 11 12
        on right: 3 4 43 44
    arithmetic_exp <var> (41)
        on left: 13 14
        on right: 10 13 23 24 31
    sum <var> (42)
        on left: 15 16 17 18
        on right: 13 14 15
    mul <var> (43)
        on left: 19 20
        on right: 15 18 19
    pow <var> (44)
        on left: 21 22 23 24
        on right: 19 20
    boolean_exp <var> (45)
        on left: 25 26
        on right: 11 25 34
    and <var> (46)
        on left: 27 28
        on right: 25 26 27
    not <var> (47)
        on left: 29 30
        on right: 27 28
    top_bool <var> (48)
        on left: 31 32 33 34 35
        on right: 29 30
    strlen_exp <var> (49)
        on left: 36 37
        on right: 12
    array_exp <var> (50)
        on left: 38 39 40 41
        on right: 8
    array_declaration <var> (51)
        on left: 42
        on right: 38
    array_assignment <var> (52)
        on left: 43 44 45
        on right: 40
    array_access <var> (53)
        on left: 46
        on right: 39
    arithmetic_op1 <var> (54)
        on left: 47 48
        on right: 13
    arithmetic_op2 <var> (55)
        on left: 49 50 51
        on right: 15
    trigonometric_op <var> (56)
        on left: 52 53 54
        on right: 24
    boolean_op <var> (57)
        on left: 55 56 57 58 59 60
        on right: 31


Estado 0

    0 $accept: • instructions $end

    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    NOT            desplazar e ir al estado 4
    DEC_MODE       desplazar e ir al estado 5
    OCT_MODE       desplazar e ir al estado 6
    HEX_MODE       desplazar e ir al estado 7
    STRLEN         desplazar e ir al estado 8
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 12
    ARRAY_ID       desplazar e ir al estado 13
    INTRO          desplazar e ir al estado 14
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    instructions       ir al estado 18
    instruction        ir al estado 19
    expression         ir al estado 20
    arithmetic_exp     ir al estado 21
    sum                ir al estado 22
    mul                ir al estado 23
    pow                ir al estado 24
    boolean_exp        ir al estado 25
    and                ir al estado 26
    not                ir al estado 27
    top_bool           ir al estado 28
    strlen_exp         ir al estado 29
    array_exp          ir al estado 30
    array_declaration  ir al estado 31
    array_assignment   ir al estado 32
    array_access       ir al estado 33
    trigonometric_op   ir al estado 34


Estado 1

   23 pow: OPEN • arithmetic_exp CLOSE
   34 top_bool: OPEN • boolean_exp CLOSE

    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    NOT            desplazar e ir al estado 4
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 36
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    boolean_exp       ir al estado 37
    and               ir al estado 26
    not               ir al estado 27
    top_bool          ir al estado 28
    trigonometric_op  ir al estado 34


Estado 2

   32 top_bool: TTRUE •

    $default  reduce usando la regla 32 (top_bool)


Estado 3

   33 top_bool: TFALSE •

    $default  reduce usando la regla 33 (top_bool)


Estado 4

   29 not: NOT • top_bool

    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 38
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    top_bool          ir al estado 39
    trigonometric_op  ir al estado 34


Estado 5

    5 instruction: DEC_MODE • INTRO

    INTRO  desplazar e ir al estado 40


Estado 6

    6 instruction: OCT_MODE • INTRO

    INTRO  desplazar e ir al estado 41


Estado 7

    7 instruction: HEX_MODE • INTRO

    INTRO  desplazar e ir al estado 42


Estado 8

   36 strlen_exp: STRLEN • OPEN ARITHMETIC_ID CLOSE
   37           | STRLEN • OPEN VAR CLOSE

    OPEN  desplazar e ir al estado 43


Estado 9

   16 sum: SUB • VAR
   17    | SUB • ARITHMETIC_ID

    VAR            desplazar e ir al estado 44
    ARITHMETIC_ID  desplazar e ir al estado 45


Estado 10

   22 pow: VAR •

    $default  reduce usando la regla 22 (pow)


Estado 11

   35 top_bool: BOOLEAN_ID •

    $default  reduce usando la regla 35 (top_bool)


Estado 12

    3 instruction: ARITHMETIC_ID • ASIGN expression INTRO
   21 pow: ARITHMETIC_ID •
   42 array_declaration: ARITHMETIC_ID • ASIGN LBRACKET VAR RBRACKET
   45 array_assignment: ARITHMETIC_ID • ASIGN ARRAY_ID LBRACKET VAR RBRACKET

    ASIGN  desplazar e ir al estado 46

    $default  reduce usando la regla 21 (pow)


Estado 13

   41 array_exp: ARRAY_ID •
   43 array_assignment: ARRAY_ID • LBRACKET VAR RBRACKET ASIGN expression
   44                 | ARRAY_ID • LBRACKET ARITHMETIC_ID RBRACKET ASIGN expression
   46 array_access: ARRAY_ID • LBRACKET VAR RBRACKET

    LBRACKET  desplazar e ir al estado 47

    $default  reduce usando la regla 41 (array_exp)


Estado 14

    9 instruction: INTRO •

    $default  reduce usando la regla 9 (instruction)


Estado 15

   53 trigonometric_op: COS •

    $default  reduce usando la regla 53 (trigonometric_op)


Estado 16

   52 trigonometric_op: SIN •

    $default  reduce usando la regla 52 (trigonometric_op)


Estado 17

   54 trigonometric_op: TAN •

    $default  reduce usando la regla 54 (trigonometric_op)


Estado 18

    0 $accept: instructions • $end
    1 instructions: instructions • instruction

    $end           desplazar e ir al estado 48
    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    NOT            desplazar e ir al estado 4
    DEC_MODE       desplazar e ir al estado 5
    OCT_MODE       desplazar e ir al estado 6
    HEX_MODE       desplazar e ir al estado 7
    STRLEN         desplazar e ir al estado 8
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 12
    ARRAY_ID       desplazar e ir al estado 13
    INTRO          desplazar e ir al estado 14
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    instruction        ir al estado 49
    expression         ir al estado 20
    arithmetic_exp     ir al estado 21
    sum                ir al estado 22
    mul                ir al estado 23
    pow                ir al estado 24
    boolean_exp        ir al estado 25
    and                ir al estado 26
    not                ir al estado 27
    top_bool           ir al estado 28
    strlen_exp         ir al estado 29
    array_exp          ir al estado 30
    array_declaration  ir al estado 31
    array_assignment   ir al estado 32
    array_access       ir al estado 33
    trigonometric_op   ir al estado 34


Estado 19

    2 instructions: instruction •

    $default  reduce usando la regla 2 (instructions)


Estado 20

    4 instruction: expression • INTRO

    INTRO  desplazar e ir al estado 50


Estado 21

   10 expression: arithmetic_exp •
   13 arithmetic_exp: arithmetic_exp • arithmetic_op1 sum
   31 top_bool: arithmetic_exp • boolean_op arithmetic_exp

    ADD  desplazar e ir al estado 51
    SUB  desplazar e ir al estado 52
    GT   desplazar e ir al estado 53
    LT   desplazar e ir al estado 54
    GE   desplazar e ir al estado 55
    LE   desplazar e ir al estado 56
    EQ   desplazar e ir al estado 57
    NE   desplazar e ir al estado 58

    $default  reduce usando la regla 10 (expression)

    arithmetic_op1  ir al estado 59
    boolean_op      ir al estado 60


Estado 22

   14 arithmetic_exp: sum •
   15 sum: sum • arithmetic_op2 mul

    MUL  desplazar e ir al estado 61
    DIV  desplazar e ir al estado 62
    MOD  desplazar e ir al estado 63

    $default  reduce usando la regla 14 (arithmetic_exp)

    arithmetic_op2  ir al estado 64


Estado 23

   18 sum: mul •
   19 mul: mul • POW pow

    POW  desplazar e ir al estado 65

    $default  reduce usando la regla 18 (sum)


Estado 24

   20 mul: pow •

    $default  reduce usando la regla 20 (mul)


Estado 25

   11 expression: boolean_exp •
   25 boolean_exp: boolean_exp • OR and

    OR  desplazar e ir al estado 66

    $default  reduce usando la regla 11 (expression)


Estado 26

   26 boolean_exp: and •
   27 and: and • AND not

    AND  desplazar e ir al estado 67

    $default  reduce usando la regla 26 (boolean_exp)


Estado 27

   28 and: not •

    $default  reduce usando la regla 28 (and)


Estado 28

   30 not: top_bool •

    $default  reduce usando la regla 30 (not)


Estado 29

   12 expression: strlen_exp •

    $default  reduce usando la regla 12 (expression)


Estado 30

    8 instruction: array_exp • INTRO

    INTRO  desplazar e ir al estado 68


Estado 31

   38 array_exp: array_declaration •

    $default  reduce usando la regla 38 (array_exp)


Estado 32

   40 array_exp: array_assignment •

    $default  reduce usando la regla 40 (array_exp)


Estado 33

   39 array_exp: array_access •

    $default  reduce usando la regla 39 (array_exp)


Estado 34

   24 pow: trigonometric_op • OPEN arithmetic_exp CLOSE

    OPEN  desplazar e ir al estado 69


Estado 35

   21 pow: ARITHMETIC_ID •

    $default  reduce usando la regla 21 (pow)


Estado 36

   13 arithmetic_exp: arithmetic_exp • arithmetic_op1 sum
   23 pow: OPEN arithmetic_exp • CLOSE
   31 top_bool: arithmetic_exp • boolean_op arithmetic_exp

    CLOSE  desplazar e ir al estado 70
    ADD    desplazar e ir al estado 51
    SUB    desplazar e ir al estado 52
    GT     desplazar e ir al estado 53
    LT     desplazar e ir al estado 54
    GE     desplazar e ir al estado 55
    LE     desplazar e ir al estado 56
    EQ     desplazar e ir al estado 57
    NE     desplazar e ir al estado 58

    arithmetic_op1  ir al estado 59
    boolean_op      ir al estado 60


Estado 37

   25 boolean_exp: boolean_exp • OR and
   34 top_bool: OPEN boolean_exp • CLOSE

    CLOSE  desplazar e ir al estado 71
    OR     desplazar e ir al estado 66


Estado 38

   13 arithmetic_exp: arithmetic_exp • arithmetic_op1 sum
   31 top_bool: arithmetic_exp • boolean_op arithmetic_exp

    ADD  desplazar e ir al estado 51
    SUB  desplazar e ir al estado 52
    GT   desplazar e ir al estado 53
    LT   desplazar e ir al estado 54
    GE   desplazar e ir al estado 55
    LE   desplazar e ir al estado 56
    EQ   desplazar e ir al estado 57
    NE   desplazar e ir al estado 58

    arithmetic_op1  ir al estado 59
    boolean_op      ir al estado 60


Estado 39

   29 not: NOT top_bool •

    $default  reduce usando la regla 29 (not)


Estado 40

    5 instruction: DEC_MODE INTRO •

    $default  reduce usando la regla 5 (instruction)


Estado 41

    6 instruction: OCT_MODE INTRO •

    $default  reduce usando la regla 6 (instruction)


Estado 42

    7 instruction: HEX_MODE INTRO •

    $default  reduce usando la regla 7 (instruction)


Estado 43

   36 strlen_exp: STRLEN OPEN • ARITHMETIC_ID CLOSE
   37           | STRLEN OPEN • VAR CLOSE

    VAR            desplazar e ir al estado 72
    ARITHMETIC_ID  desplazar e ir al estado 73


Estado 44

   16 sum: SUB VAR •

    $default  reduce usando la regla 16 (sum)


Estado 45

   17 sum: SUB ARITHMETIC_ID •

    $default  reduce usando la regla 17 (sum)


Estado 46

    3 instruction: ARITHMETIC_ID ASIGN • expression INTRO
   42 array_declaration: ARITHMETIC_ID ASIGN • LBRACKET VAR RBRACKET
   45 array_assignment: ARITHMETIC_ID ASIGN • ARRAY_ID LBRACKET VAR RBRACKET

    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    NOT            desplazar e ir al estado 4
    STRLEN         desplazar e ir al estado 8
    LBRACKET       desplazar e ir al estado 74
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 35
    ARRAY_ID       desplazar e ir al estado 75
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    expression        ir al estado 76
    arithmetic_exp    ir al estado 21
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    boolean_exp       ir al estado 25
    and               ir al estado 26
    not               ir al estado 27
    top_bool          ir al estado 28
    strlen_exp        ir al estado 29
    trigonometric_op  ir al estado 34


Estado 47

   43 array_assignment: ARRAY_ID LBRACKET • VAR RBRACKET ASIGN expression
   44                 | ARRAY_ID LBRACKET • ARITHMETIC_ID RBRACKET ASIGN expression
   46 array_access: ARRAY_ID LBRACKET • VAR RBRACKET

    VAR            desplazar e ir al estado 77
    ARITHMETIC_ID  desplazar e ir al estado 78


Estado 48

    0 $accept: instructions $end •

    $default  aceptar


Estado 49

    1 instructions: instructions instruction •

    $default  reduce usando la regla 1 (instructions)


Estado 50

    4 instruction: expression INTRO •

    $default  reduce usando la regla 4 (instruction)


Estado 51

   47 arithmetic_op1: ADD •

    $default  reduce usando la regla 47 (arithmetic_op1)


Estado 52

   48 arithmetic_op1: SUB •

    $default  reduce usando la regla 48 (arithmetic_op1)


Estado 53

   55 boolean_op: GT •

    $default  reduce usando la regla 55 (boolean_op)


Estado 54

   56 boolean_op: LT •

    $default  reduce usando la regla 56 (boolean_op)


Estado 55

   57 boolean_op: GE •

    $default  reduce usando la regla 57 (boolean_op)


Estado 56

   58 boolean_op: LE •

    $default  reduce usando la regla 58 (boolean_op)


Estado 57

   59 boolean_op: EQ •

    $default  reduce usando la regla 59 (boolean_op)


Estado 58

   60 boolean_op: NE •

    $default  reduce usando la regla 60 (boolean_op)


Estado 59

   13 arithmetic_exp: arithmetic_exp arithmetic_op1 • sum

    OPEN           desplazar e ir al estado 79
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    sum               ir al estado 80
    mul               ir al estado 23
    pow               ir al estado 24
    trigonometric_op  ir al estado 34


Estado 60

   31 top_bool: arithmetic_exp boolean_op • arithmetic_exp

    OPEN           desplazar e ir al estado 79
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 81
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    trigonometric_op  ir al estado 34


Estado 61

   49 arithmetic_op2: MUL •

    $default  reduce usando la regla 49 (arithmetic_op2)


Estado 62

   50 arithmetic_op2: DIV •

    $default  reduce usando la regla 50 (arithmetic_op2)


Estado 63

   51 arithmetic_op2: MOD •

    $default  reduce usando la regla 51 (arithmetic_op2)


Estado 64

   15 sum: sum arithmetic_op2 • mul

    OPEN           desplazar e ir al estado 79
    VAR            desplazar e ir al estado 10
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    mul               ir al estado 82
    pow               ir al estado 24
    trigonometric_op  ir al estado 34


Estado 65

   19 mul: mul POW • pow

    OPEN           desplazar e ir al estado 79
    VAR            desplazar e ir al estado 10
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    pow               ir al estado 83
    trigonometric_op  ir al estado 34


Estado 66

   25 boolean_exp: boolean_exp OR • and

    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    NOT            desplazar e ir al estado 4
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 38
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    and               ir al estado 84
    not               ir al estado 27
    top_bool          ir al estado 28
    trigonometric_op  ir al estado 34


Estado 67

   27 and: and AND • not

    OPEN           desplazar e ir al estado 1
    TTRUE          desplazar e ir al estado 2
    TFALSE         desplazar e ir al estado 3
    NOT            desplazar e ir al estado 4
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    BOOLEAN_ID     desplazar e ir al estado 11
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 38
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    not               ir al estado 85
    top_bool          ir al estado 28
    trigonometric_op  ir al estado 34


Estado 68

    8 instruction: array_exp INTRO •

    $default  reduce usando la regla 8 (instruction)


Estado 69

   24 pow: trigonometric_op OPEN • arithmetic_exp CLOSE

    OPEN           desplazar e ir al estado 79
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 86
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    trigonometric_op  ir al estado 34


Estado 70

   23 pow: OPEN arithmetic_exp CLOSE •

    $default  reduce usando la regla 23 (pow)


Estado 71

   34 top_bool: OPEN boolean_exp CLOSE •

    $default  reduce usando la regla 34 (top_bool)


Estado 72

   37 strlen_exp: STRLEN OPEN VAR • CLOSE

    CLOSE  desplazar e ir al estado 87


Estado 73

   36 strlen_exp: STRLEN OPEN ARITHMETIC_ID • CLOSE

    CLOSE  desplazar e ir al estado 88


Estado 74

   42 array_declaration: ARITHMETIC_ID ASIGN LBRACKET • VAR RBRACKET

    VAR  desplazar e ir al estado 89


Estado 75

   45 array_assignment: ARITHMETIC_ID ASIGN ARRAY_ID • LBRACKET VAR RBRACKET

    LBRACKET  desplazar e ir al estado 90


Estado 76

    3 instruction: ARITHMETIC_ID ASIGN expression • INTRO

    INTRO  desplazar e ir al estado 91


Estado 77

   43 array_assignment: ARRAY_ID LBRACKET VAR • RBRACKET ASIGN expression
   46 array_access: ARRAY_ID LBRACKET VAR • RBRACKET

    RBRACKET  desplazar e ir al estado 92


Estado 78

   44 array_assignment: ARRAY_ID LBRACKET ARITHMETIC_ID • RBRACKET ASIGN expression

    RBRACKET  desplazar e ir al estado 93


Estado 79

   23 pow: OPEN • arithmetic_exp CLOSE

    OPEN           desplazar e ir al estado 79
    SUB            desplazar e ir al estado 9
    VAR            desplazar e ir al estado 10
    ARITHMETIC_ID  desplazar e ir al estado 35
    COS            desplazar e ir al estado 15
    SIN            desplazar e ir al estado 16
    TAN            desplazar e ir al estado 17

    arithmetic_exp    ir al estado 94
    sum               ir al estado 22
    mul               ir al estado 23
    pow               ir al estado 24
    trigonometric_op  ir al estado 34


Estado 80

   13 arithmetic_exp: arithmetic_exp arithmetic_op1 sum •
   15 sum: sum • arithmetic_op2 mul

    MUL  desplazar e ir al estado 61
    DIV  desplazar e ir al estado 62
    MOD  desplazar e ir al estado 63

    $default  reduce usando la regla 13 (arithmetic_exp)

    arithmetic_op2  ir al estado 64


Estado 81

   13 arithmetic_exp: arithmetic_exp • arithmetic_op1 sum
   31 top_bool: arithmetic_exp boolean_op arithmetic_exp •

    ADD  desplazar e ir al estado 51
    SUB  desplazar e ir al estado 52

    $default  reduce usando la regla 31 (top_bool)

    arithmetic_op1  ir al estado 59


Estado 82

   15 sum: sum arithmetic_op2 mul •
   19 mul: mul • POW pow

    POW  desplazar e ir al estado 65

    $default  reduce usando la regla 15 (sum)


Estado 83

   19 mul: mul POW pow •

    $default  reduce usando la regla 19 (mul)


Estado 84

   25 boolean_exp: boolean_exp OR and •
   27 and: and • AND not

    AND  desplazar e ir al estado 67

    $default  reduce usando la regla 25 (boolean_exp)


Estado 85

   27 and: and AND not •

    $default  reduce usando la regla 27 (and)


Estado 86

   13 arithmetic_exp: arithmetic_exp • arithmetic_op1 sum
   24 pow: trigonometric_op OPEN arithmetic_exp • CLOSE

    CLOSE  desplazar e ir al estado 95
    ADD    desplazar e ir al estado 51
    SUB    desplazar e ir al estado 52

    arithmetic_op1  ir al estado 59


Estado 87

   37 strlen_exp: STRLEN OPEN VAR CLOSE •

    $default  reduce usando la regla 37 (strlen_exp)


Estado 88

   36 strlen_exp: STRLEN OPEN ARITHMETIC_ID CLOSE •

    $default  reduce usando la regla 36 (strlen_exp)


Estado 89

   42 array_declaration: ARITHMETIC_ID ASIGN LBRACKET VAR • RBRACKET

    RBRACKET  desplazar e ir al estado 96


Estado 90

   45 array_assignment: ARITHMETIC_ID ASIGN ARRAY_ID LBRACKET • VAR RBRACKET

    VAR  desplazar e ir al estado 97


Estado 91

    3 instruction: ARITHMETIC_ID ASIGN expression INTRO •

    $default  reduce usando la regla 3 (instruction)


Estado 92

   43 array_assignment: ARRAY_ID LBRACKET VAR RBRACKET • ASIGN expression
   46 array_access: ARRAY_ID LBRACKET VAR RBRACKET •
